# learnopengl

./: LICENSE  learnopengl.cabal
src/: Main.hs  Shader.hs  Util.hs
src/shaders/: triangle.fragment.glsl  triangle.vertex.glsl
