name:                learnopengl
version:             0.1.0.0
homepage:            https://github.com/ericnething/learnopengl
license:             BSD3
license-file:        LICENSE
author:              Eric Nething
maintainer:          emnething@gmail.com
copyright:           2017 Eric Nething
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable learnopengl
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Shader
                     , Util
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , transformers
                     , bytestring
                     , gl
                     , sdl2
